--- a/manglyaan.html
+++ b/manglyaan.html
@@ -8,7 +8,7 @@
               <b><center>Mangalyaan</center></b>
 </font>
 <center>
-	<img src="imagess.jpg" height="200"width="400"align="center"border="4">
+	<img src="mangalyaan.jpg" height="200"width="400"align="center"border="4">
 </center>
    <font size="4">
             <p align="align">
