--- a/title2.html
+++ b/title2.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-	<title> isro</title>
+	<title> ISRO</title>
 </head>
 <body bgcolor="pink">
-	<h2><a href="home.html" target="new page"><button type="button">HOME</button></a></h2>
+	<h2><a href="index.html" target="new page"><button type="button">HOME</button></a></h2>
 	<center><font size="10" color="purple">TOP 9 ACHIEVEMENTS OF ISRO</font></center><br>
 </body>
 </html>
